[T001TULIA-14] #CHANGE 'scope: table' <T001TULIA-25>

--- a/src/assets/fonts/icon/icons.css
+++ b/src/assets/fonts/icon/icons.css
@@ -403,11 +403,11 @@
   content: "\EA2F"
 }
 
-.icon-sorting_ascending:before {
+.icon-sort-asc:before {
   content: "\EA30"
 }
 
-.icon-sorting_descending:before {
+.icon-sort-desc:before {
   content: "\EA31"
 }
 
