--- a/src/scss/00_settings/_settings.colors.scss
+++ b/src/scss/00_settings/_settings.colors.scss
@@ -1,20 +1,19 @@
 $global-colors: (
-  "anthracite": #4b4b4b,
-  "blue-dark": #0c78ab,
-  "blue": #0f93d1,
-  "grey-dark": #323232,
-  "grey-light": #f0f0f0,
-  "grey": #aeaeae,
-  "red-dark": #b94b3c,
-  "red": #dd5746,
-  "success": #8cc96f,
-  "turquoise-dark": #2a6d6f,
-  "turquoise": #399193,
-  "turquoise-trans": rgb(57, 145, 147),
-  "warning": #f4c343,
-  "white": #ffffff,
-  "yellow-dark": #bd7d20,
-  "yellow": #e39726,
+  "anthracite": "75,75,75",
+  "blue-dark": "12,120,171",
+  "blue": "15,147,209",
+  "grey-dark": "50,50,50",
+  "grey-light": "240,240,240",
+  "grey": "174,174,174",
+  "red-dark": "185,75,60",
+  "red": "221,87,70",
+  "success": "140,201,111",
+  "turquoise-dark": "42,109,111",
+  "turquoise": "57,145,147",
+  "warning": "244,195,67",
+  "white": "255,255,255",
+  "yellow-dark": "189,125,32",
+  "yellow": "227,151,38",
 );
 
 /* *************************
