--- a/src/scss/05_components/_components.nav.scss
+++ b/src/scss/05_components/_components.nav.scss
@@ -16,7 +16,7 @@
   }
 
   &__divider {
-    background: var(--lia-grey-light);
+    background: rgb(var(--lia-grey-light));
     border: none;
     height: 1px;
     margin: 1rem 0;
