--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -42,7 +42,7 @@
 @import "05_components/components.accordion";
 @import "05_components/components.card";
 @import "05_components/components.dropdown";
-@import "05_components/components.effect-circle";
+@import "05_components/components.effect";
 @import "05_components/components.header";
 @import "05_components/components.nav";
 @import "05_components/components.notes";
