--- a/src/scss/05_components/_components.pagination.scss
+++ b/src/scss/05_components/_components.pagination.scss
@@ -1,17 +1,17 @@
 .lia-pagination {
-    display: inline-block;
- 
-    &__content {
-        align-items: center;
-        background: $color-turquoise-1;
-        color: white;
-        border-radius: $global-radius;
-        display: flex;
-        flex-wrap: wrap;
-        width: 100%;
-    }
+  display: inline-block;
 
-    &__current {
-        margin: 0 1rem;
-    }
+  &__content {
+    align-items: center;
+    background: rgb(var(--color-highlight));
+    color: white;
+    border-radius: $global-radius;
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+  }
+
+  &__current {
+    margin: 0 1rem;
+  }
 }
