--- a/src/scss/03_elements/_elements.button.scss
+++ b/src/scss/03_elements/_elements.button.scss
@@ -3,6 +3,7 @@ $btn-height: 3.6rem;
 
 .lia-btn {
   border: none;
+  color: currentColor;
   display: inline-block;
   line-height: $global-line-height;
   padding: 0.5rem 0.6rem 0.5rem 0.6rem;
