--- a/src/scss/05_components/_components.slide.scss
+++ b/src/scss/05_components/_components.slide.scss
@@ -1,17 +1,15 @@
 .lia-slide {
   display: flex;
   flex-direction: column;
-  height: 100%;
+  height: 100vh;
   position: relative;
   width: 100%;
 
   &__footer {
     align-items: flex-start;
-    bottom: 0;
     display: flex;
     flex-direction: column;
     max-width: 144rem;
-    position: absolute;
     width: 100%;
     z-index: 50;
 
@@ -30,7 +28,6 @@
     height: 100%;
     margin-top: $header-height-mobile;
     margin-bottom: 2rem;
-    max-height: 80vh;
     max-width: 144rem;
     overflow: hidden auto;
     padding: 3rem 3rem 0;
