Hotfix: Fontsize Pagination

--- a/src/scss/06_utilities/_utilities.text.scss
+++ b/src/scss/06_utilities/_utilities.text.scss
@@ -1,3 +1,5 @@
+/* Alignment */
+
 .text-left {
   text-align: left;
 }
@@ -8,4 +10,10 @@
 
 .text-right {
   text-align: right;
+}
+
+/* Font-Weight */
+
+.font-400 {
+  font-weight: 400;
 }
