--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -63,7 +63,7 @@
 @import "06_utilities/utilities.headless";
 @import "06_utilities/utilities.hidden";
 @import "06_utilities/utilities.spacings";
-@import "06_utilities/utilities.text-align";
+@import "06_utilities/utilities.text";
 
 // Themes
 @import "themes";
