--- a/src/scss/05_components/_components.effect.scss
+++ b/src/scss/05_components/_components.effect.scss
@@ -1,6 +1,6 @@
 .lia-effect {
   &__content {
-    display: inline-block;
+    display: block;
   }
 
   &__circle {
@@ -20,6 +20,7 @@
     }
 
     &--inline {
+      display: inline-block;
       position: relative;
       width: 1.8rem;
       height: 1.8rem;
