fix(Effects): Differenciate between inline & block

--- a/src/scss/05_components/_components.effect.scss
+++ b/src/scss/05_components/_components.effect.scss
@@ -21,7 +21,6 @@
     }
 
     &--inline {
-      display: inline-block;
       position: relative;
       width: 1.8rem;
       height: 1.8rem;
@@ -33,6 +32,10 @@
         left: 1.8rem * -1.5;
       }
     }
+  }
+
+  &--inline {
+    display: inline-block;
   }
 }
 
