[T001TULIA-14] #CHANGE 'scope: quotes' <T001TULIA-23>

--- a/src/scss/03_elements/_elements.page.scss
+++ b/src/scss/03_elements/_elements.page.scss
@@ -10,17 +10,21 @@
 :root {
   --color-text: var(--lia-anthracite);
   --color-highlight: var(--lia-turquoise);
+  --color-highlight-dark: var(--lia-turquoise-dark);
   --color-background: var(--lia-white);
 
   &.lia-theme-red {
     --color-highlight: var(--lia-red);
+    --color-highlight-dark: var(--lia-red-dark);
   }
 
   &.lia-theme-blue {
     --color-highlight: var(--lia-blue);
+    --color-highlight-dark: var(--lia-blue-dark);
   }
 
   &.lia-theme-yellow {
     --color-highlight: var(--lia-yellow);
+    --color-highlight-dark: var(--lia-yellow-dark);
   }
 }
