--- a/src/scss/themes.scss
+++ b/src/scss/themes.scss
@@ -20,7 +20,7 @@
     @include style-dropdown($theme);
     //@include style-effect-circle($theme);
     @include style-header($theme);
-    @include style-quote($theme);
+    //@include style-quote($theme);
     @include style-script($theme);
     //@include style-table($theme);
     @include style-toc($theme);
