--- a/src/scss/05_components/_components.quote.scss
+++ b/src/scss/05_components/_components.quote.scss
@@ -2,6 +2,10 @@
   background-color: rgba(var(--color-highlight), 0.15);
   padding: 2.4rem;
 
+  &[cite] {
+    padding: 2.4rem 4.8rem;
+  }
+
   > *:last-child {
     margin-bottom: 0;
   }
@@ -10,11 +14,13 @@
     color: rgb(var(--color-highlight-dark));
     font-family: "LiaSourceSerifPro";
     font-weight: 600;
+    font-size: 1.6rem;
     text-align: center;
   }
 
   &__cite {
     display: block;
+    font-style: normal;
     margin-top: 2rem;
     text-align: center;
   }
