[T001TULIA-14] #CHANGE 'fix: framework' <T001TULIA-18>

--- a/src/scss/03_elements/_elements.list.scss
+++ b/src/scss/03_elements/_elements.list.scss
@@ -17,7 +17,7 @@
     > li {
       &:before {
         content: "\EA0D";
-        color: rgb(var(--lia-turquoise));
+        color: rgb(var(--color-highlight-dark));
         font-family: "icon";
         left: 0;
         position: absolute;
