--- a/src/scss/05_components/_components.toc.scss
+++ b/src/scss/05_components/_components.toc.scss
@@ -204,7 +204,7 @@
             top: 0;
             height: 100%;
             width: 5px;
-            background-color: rgb(var(--lia-turquoise));
+            background-color: rgb(var(--color-highlight));
           }
 
           &:hover {
